--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,13 @@
             <version>21.0.7</version>
         </dependency>
 
+        <!-- JSON Parsing -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
         <!-- Logging -->
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
         <dependency>
