--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,7 @@
                 <version>3.13.0</version>
                 <configuration>
                     <release>21</release>
+                    <fork>true</fork>
                 </configuration>
             </plugin>
 
